# tradetally

./: .dockerignore  .env.development.example  .env.example  .env.production.example  .gitignore  API_DOCUMENTATION.md  CLAUDE.md  DCF_FORMULA_DOCUMENTATION.md  DEBUGGING_AI_RECOMMENDATIONS.md  DEPLOYMENT.md  DISCOUNT_RATE_EXPLANATION.md  Dockerfile  MIGRATION_TO_NATIVE.md  MOBILE_API.md  MOBILE_MIGRATION.md  MOBILE_QUICK_START.md  Makefile  README.md  backend-bom.json  build-docker.sh  common.mk  deploy.sh  docker-compose.auto-migrate.yaml  docker-compose.dev.yaml  docker-compose.dev2.yaml  docker-compose.example.yaml  docker-compose.production.yaml  docker-compose.yaml  ecosystem.config.js  index.html  migrate-postgres-16.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  quick-deploy.sh  rescue-migrate-postgres-16.sh  rollback-postgres-15.sh  schema.sql  setup.sh  (+6 more)
.claude/: claude.md  settings.local.json
backend/: .env.example  Makefile  TELEMETRY.md  check-admin.js  check-env.js  check_trade.js  fix-pnl-calculations.js  fix_lightspeed_timezone.js  jest.config.js  jest.integration.config.js  package-lock.json  package.json  recalculate_r_values.js  run-export-migration.js  test-conid.js  test-gemini.js  test_api.js  test_query.js  test_rankings.js
bridge/: .env.example  pyproject.toml
bridge/journal_bridge/: config.py  db.py  main.py  migrations.py  models.py  parser.py  service.py  tradetally_client.py
bridge/migrations/: 001_journal_ext_schema.sql
bridge/tests/: test_api.py  test_campaigns.py  test_parser.py  test_service.py
(+1293 files in other folders)
